[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gith"
version = "0.2.4"
description = "A Typer-based helper for Git operations"
authors = [
    { name = "Reinaldo J. Menéndez", email = "rejamen@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
    "typer>=0.15.1",
    "rich>=10.11.0",
    "pyyaml>=5.4"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/rejamen/gith"
Issues = "https://github.com/rejamen/gith/issues"

[project.scripts]
gith = "gith.cli:app"
